tests/fixtures/errors/unknown_member.z
# unknown member of an inline unit.
m: unit { x: 1 }
main: function is {
    z: m.y
}
